# painless

./: meson.build
solvers/glucose/parallel/: depend.mk
solvers/kissat-inc/: makefile
solvers/lingeling/: lglcfg.h  lglcflags.h
src/: globals.cpp  painless.cpp  painless.hpp
src/containers/: Bitset.hpp  ClauseBuffer.hpp  ClauseDatabase.hpp  ClauseDatabaseBufferPerEntity.cpp  ClauseDatabaseBufferPerEntity.hpp  ClauseDatabaseMallob.cpp  ClauseDatabaseMallob.hpp  ClauseDatabasePerSize.cpp  ClauseDatabasePerSize.hpp  ClauseDatabaseSingleBuffer.hpp  ClauseExchange.cpp  ClauseExchange.hpp  ClauseUtils.cpp  ClauseUtils.hpp  Formula.cpp  Formula.hpp  vector2D.hpp
src/preprocessors/: PreprocessorInterface.hpp  StructuredBva.cpp  StructuredBva.hpp  StructuredBvaRun.cpp
src/preprocessors/PRS-Preprocessors/: binary.cpp  card.cpp  circuit.cpp  gauss.cpp  preprocess.cpp  preprocess.hpp  propagation.cpp  resolution.cpp
src/preprocessors/PRS-Preprocessors/utils-prs/: bitset.cpp  bitset.hpp  hashmap.cpp  hashmap.hpp  parse.cpp  parse.hpp
src/sharing/: Sharer.cpp  Sharer.hpp  SharingEntity.hpp  SharingStrategy.hpp  SharingStrategyFactory.cpp  SharingStrategyFactory.hpp
src/sharing/Filters/: BloomFilter.hpp  ExactFilter.cpp
src/sharing/GlobalStrategies/: AllGatherSharing.cpp  AllGatherSharing.hpp  GenericGlobalSharing.cpp  GenericGlobalSharing.hpp  GlobalSharingStrategy.cpp  GlobalSharingStrategy.hpp  MallobSharing.cpp  MallobSharing.hpp
src/sharing/LocalStrategies/: HordeSatSharing.cpp  HordeSatSharing.hpp  SimpleSharing.cpp  SimpleSharing.hpp
src/solvers/: SolverFactory.cpp  SolverFactory.hpp  SolverInterface.cpp  SolverInterface.hpp
src/solvers/CDCL/: Cadical.cpp  Cadical.hpp  GlucoseSyrup.cpp  GlucoseSyrup.hpp  Kissat.cpp  Kissat.hpp  KissatFamily.hpp  KissatINCSolver.cpp  KissatINCSolver.hpp  KissatMABSolver.cpp  KissatMABSolver.hpp  Lingeling.cpp  Lingeling.hpp  MapleCOMSPSSolver.cpp  MapleCOMSPSSolver.hpp  MiniSat.cpp  MiniSat.hpp  SolverCdclInterface.hpp
src/solvers/LocalSearch/: LocalSearchInterface.hpp  YalSat.cpp  YalSat.hpp
src/utils/: ErrorCodes.hpp  Logger.cpp  Logger.hpp  MpiUtils.cpp  MpiUtils.hpp  NumericConstants.hpp  Parameters.cpp  Parameters.hpp  Parsers.cpp  Parsers.hpp  System.cpp  System.hpp  Threading.hpp  hashfunc.hpp
src/working/: PortfolioPRS.cpp  PortfolioPRS.hpp  PortfolioSimple.cpp  PortfolioSimple.hpp  SequentialWorker.cpp  SequentialWorker.hpp  WorkingStrategy.hpp
